<resources>
    <string name="app_name">LS_13</string>
    <string name="name_1">Хася</string>
    <string name="name_2">Грагентин</string>
    <string name="name_3">Шайна</string>
    <string name="name_4">Гаврик</string>
    <string name="name_5">Тарзанчик</string>
    <string name="next_screen_tabLayout">Экран с TabLayout</string>
    <string name="show_simple_dialog">Показать простой диалог</string>
    <string name="next_screen_dialog">Экран с диалогами</string>
    <string name="show_dialog_with_buttons">Показать диалог с кнопками</string>
    <string name="show_dialog_with_single_choice">Показать диалог с одним выбором</string>
    <string name="show_dialog_custom_choice">Показать кастомный диалог</string>
    <string name="show_dialog_fragment">Показать диалог фрагмент</string>
    <string name="show_bottom_sheet_dialog">Показать bottomSheetDialog</string>
    <string name="warning_pot_is_boiling">Предупреждение котелок кипит !</string>
    <string name="add_photo">Добавить фото</string>
    <string name="open_gallery">Открыть галерею</string>
    <string name="delete_photo">Удалить фото</string>
</resources>