<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonSimpleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/show_simple_dialog" />

    <Button
        android:id="@+id/buttonShowDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog_with_buttons"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonShowSingleChoiceDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog_with_single_choice"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonShowCustomDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog_custom_choice"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonShowFragmentDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog_fragment"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonShowBottomSheetDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_bottom_sheet_dialog"
        android:layout_gravity="center"/>

</LinearLayout>